--- a/assets/bootstrap-5.1.3/scss/_card.scss
+++ b/assets/bootstrap-5.1.3/scss/_card.scss
@@ -11,6 +11,8 @@
   min-width: 0; // See https://github.com/twbs/bootstrap/pull/22740#issuecomment-305868106
   height: $card-height;
   word-wrap: break-word;
+  
+  //extends aplicado
   @extend .bg-color-card;
   // background-color: $card-bg;
   background-clip: border-box;
